--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flappy Ghost</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap">
 </head>
 <body>
     <div id="gameContainer">
@@ -13,6 +14,7 @@
             <h1>Game Over</h1>
             <button onclick="restartGame()">Restart</button>
         </div>
+        <div id="scoreDisplay">Score: 0</div>
     </div>
     <script src="script.js"></script>
 </body>
