--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
             <h1>Game Over</h1>
             <button onclick="restartGame()">Restart</button>
         </div>
+        <div id="playScreen">
+            <div id="playButton">
+                <button onclick="startGame()">Play</button>
+            </div>
+            <div id="comingSoon">
+                Kasper Wallet App Coming Soon
+            </div>
+        </div>
         <div id="scoreDisplay">Score: 0</div>
     </div>
     <script src="script.js"></script>
