--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flappy Ghost</title>
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="gameContainer">
@@ -15,12 +15,8 @@
             <button onclick="restartGame()">Restart</button>
         </div>
         <div id="playScreen">
-            <div id="playButton">
-                <button onclick="startGame()">Play</button>
-            </div>
-            <div id="comingSoon">
-                Kasper Wallet App Coming Soon
-            </div>
+            <div id="comingSoon">Kasper Wallet App Coming Soon</div>
+            <button onclick="startGame()">Play</button>
         </div>
         <div id="scoreDisplay">Score: 0</div>
     </div>
