--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div id="comingSoon">Kasper Wallet App Coming Soon</div>
             <button onclick="startGame()">Play</button>
         </div>
-        <div id="scoreDisplay">Score: 0</div>
+        <div id="scoreDisplay" class="hidden">Score: 0</div>
     </div>
     <script src="script.js"></script>
 </body>
