--- a/index.html
+++ b/index.html
@@ -11,22 +11,23 @@
 <body>
     <div id="gameContainer">
         <canvas id="gameCanvas"></canvas>
+        <div id="walletForm">
+            <h1>Enter your Kaspa Wallet Address</h1>
+            <form id="submitWalletForm">
+                <input type="text" id="walletAddress" placeholder="Enter your Kaspa Wallet Address" required>
+                <button type="submit">Submit</button>
+            </form>
+        </div>
+        <div id="playScreen" class="hidden">
+            <button id="startGameButton">Start Game</button>
+        </div>
         <div id="gameOver" class="hidden">
             <h1>Game Over</h1>
-            <form id="submitScoreForm">
-                <input type="text" id="walletAddress" placeholder="Enter your Kaspa Wallet Address" required>
-                <button type="submit">Submit Score</button>
-            </form>
             <button onclick="restartGame()">Restart</button>
-        </div>
-        <div id="playScreen">
-            <div id="comingSoon">Kasper Wallet App Coming Soon</div>
-            <button onclick="startGame()">Play</button>
-        </div>
-        <div id="scoreDisplay" class="hidden">Score: 0</div>
-        <div id="leaderboard" class="hidden">
-            <h2>Leaderboard</h2>
-            <ul id="leaderboardList"></ul>
+            <div id="leaderboard" class="hidden">
+                <h2>Leaderboard</h2>
+                <ul id="leaderboardList"></ul>
+            </div>
         </div>
     </div>
     <script src="script.js"></script>
